# Agent-World-Protocol

./: .env.example  Dockerfile  README.md  package.json  render.yaml
assets/: README.md
bounties/: index.html
chat/: index.html
dashboard/: index.html
docs/: SPRITE_SPECIFICATION.md
examples/: crewai-agents.py  eliza-agent.js  function-calling-agent.py  langchain-agent.py  openclaw-agent.js  reference-agent.js  simple-agent.js  spawn-multiple.js  trading-agent.js
landing/: index.html
sdk/npm/: README.md  index.d.ts  package.json
sdk/openclaw/agent-world/: README.md  SKILL.md  connect.js
sdk/python/: README.md  setup.py
sdk/python/agent_world_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
src/: index.js
src/bridges/: BridgeManager.js  DataBridge.js  JupiterBridge.js  NFTBridge.js  PolymarketBridge.js  PumpFunBridge.js  SocialBridge.js  SolanaBridge.js
src/database/: Database.js
src/sdk/: AgentWorldSDK.js
src/server/: ConnectionManager.js  RestAPI.js  TickEngine.js  WalletAuth.js  WorldState.js
test/: test-world.js
tools/: asset-generator.html
viewer/: index.html
