[package]
name = "agent-world-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for connecting AI agents to the Agent World Protocol"
license = "MIT"
repository = "https://github.com/0xMerl99/Agent-World-Protocol"
keywords = ["ai-agents", "solana", "autonomous-agents", "websocket"]
categories = ["api-bindings", "web-programming::websocket"]

[dependencies]
tungstenite = "0.21"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
